
    o	model.frame() methods, for example those for "lm" and "glm", pass
	relevant parts of ... onto the default method.  (This has
	long been documented but not done.)  The default method is now
	able to code with model classes such as "lqs" and "ppr".

    o	ppr() has a `model' argument to allow the model frame to be
	returned as part of the fitted object.


UTILITIES

    o	R CMD check  now runs the (Rd) examples with default RNGkind
	(uniform & normal) and set.seed(1).
	example(*, setRNG = TRUE) does the same.

    o	undoc() in `tools' has a new default of `use.values = NULL'
	which produces a warning whenever the default values of function
	arguments differ between documentation and code.
	Note that this affects "R CMD check" as well.


DEPRECATED & DEFUNCT

    o	print.coefmat() is defunct, replaced by printCoefmat().

    o	codes() and codes<-() are defunct.

    o	anovalist.lm (replaced in 1.2.0) is now defunct.

    o	glm.fit.null(), lm.fit.null() and lm.wfit.null() are defunct.

    o	print.atomic() is defunct.

    o	The command-line arguments --nsize and --vsize are no longer
	recognized as synonyms for --min-nsize and --min-vsize (which
	replaced them in 1.2.0).


INSTALLATION CHANGES

    o	The defaults for configure are now --without-zlib
	--without-bzlib --without-pcre.  PCRE >= 4.0 is now required:
	the included PCRE sources have been updated to version 4.4.

    o	configure no longer lists bzip2 and PCRE as `additional
	capabilities' as all builds of R have had them since 1.7.0.


BUG FIXES

    o	contrasts() turns a logical variable into a factor.  This now
	always has levels c("FALSE", "TRUE") even if only one (or
	none) of these occur in the variable.

    o	model.frame()'s lm and glm methods had 'data' and 'na.action'
	arguments which they ignored and have been removed.




	**************************************************
	*						 *
	*	       1.8 SERIES NEWS			 *
	*						 *
	**************************************************

